--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ w\:* {behavior:url(#default#VML);}
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:"・ｭ・ｳ 譏取悃";
+	{font-family:"MS Mincho";
 	panose-1:2 2 6 9 4 2 5 8 3 4;
 	mso-font-alt:"MS Mincho";
 	mso-font-charset:128;
@@ -659,21 +659,21 @@ w\:* {behavior:url(#default#VML);}
 	mso-font-pitch:variable;
 	mso-font-signature:0 0 0 0 0 0;}
 @font-face
-	{font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
+	{font-family:"MS Mincho";
 	panose-1:2 11 6 0 7 2 5 8 2 4;
 	mso-font-charset:128;
 	mso-generic-font-family:modern;
 	mso-font-pitch:variable;
 	mso-font-signature:-536870145 1791491579 18 0 131231 0;}
 @font-face
-	{font-family:"\@・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
+	{font-family:"MS Mincho";
 	panose-1:2 11 6 0 7 2 5 8 2 4;
 	mso-font-charset:128;
 	mso-generic-font-family:modern;
 	mso-font-pitch:variable;
 	mso-font-signature:-536870145 1791491579 18 0 131231 0;}
 @font-face
-	{font-family:"\@・ｭ・ｳ 譏取悃";
+	{font-family:"MS Mincho";
 	panose-1:2 2 6 9 4 2 5 8 3 4;
 	mso-font-charset:128;
 	mso-generic-font-family:roman;
@@ -688,32 +688,32 @@ w\:* {behavior:url(#default#VML);}
 	margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
-	font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-bidi-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";}
+	font-family:"MS Mincho";
+	mso-bidi-font-family:"MS Mincho";}
 p.MsoHeader, li.MsoHeader, div.MsoHeader
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"繝倥ャ繝繝ｼ \(譁・ｭ予)";
+	mso-style-link:"MS Mincho";
 	margin:0mm;
 	margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
 	tab-stops:center 212.6pt right 425.2pt;
 	layout-grid-mode:char;
 	font-size:12.0pt;
-	font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-bidi-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";}
+	font-family:"MS Mincho";
+	mso-bidi-font-family:"MS Mincho";}
 p.MsoFooter, li.MsoFooter, div.MsoFooter
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"繝輔ャ繧ｿ繝ｼ \(譁・ｭ予)";
+	mso-style-link:"MS Mincho";
 	margin:0mm;
 	margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
 	tab-stops:center 212.6pt right 425.2pt;
 	layout-grid-mode:char;
 	font-size:12.0pt;
-	font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-bidi-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";}
+	font-family:"MS Mincho";
+	mso-bidi-font-family:"MS Mincho";}
 a:link, span.MsoHyperlink
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
@@ -735,8 +735,8 @@ p
 	margin-left:0mm;
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
-	font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-bidi-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";}
+	font-family:"MS Mincho";
+	mso-bidi-font-family:"MS Mincho";}
 p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	{mso-style-noshow:yes;
 	mso-style-priority:34;
@@ -760,7 +760,7 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	font-family:"Century",serif;
 	mso-ascii-font-family:Century;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:"・ｭ・ｳ 譏取悃";
+	mso-fareast-font-family:"MS Mincho";
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Century;
 	mso-hansi-theme-font:minor-latin;
@@ -768,33 +768,33 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	mso-bidi-theme-font:minor-bidi;
 	mso-font-kerning:1.0pt;}
 span.a
-	{mso-style-name:"繝倥ャ繝繝ｼ \(譁・ｭ予)";
+	{mso-style-name:"MS Mincho";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:繝倥ャ繝繝ｼ;
+	mso-style-link:MS Mincho;
 	mso-ansi-font-size:12.0pt;
 	mso-bidi-font-size:12.0pt;
-	font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-ascii-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-fareast-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-hansi-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-bidi-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";}
+	font-family:"MS Mincho";
+	mso-ascii-font-family:"MS Mincho";
+	mso-fareast-font-family:"MS Mincho";
+	mso-hansi-font-family:"MS Mincho";
+	mso-bidi-font-family:"MS Mincho";}
 span.a0
-	{mso-style-name:"繝輔ャ繧ｿ繝ｼ \(譁・ｭ予)";
+	{mso-style-name:"MS Mincho";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:繝輔ャ繧ｿ繝ｼ;
+	mso-style-link:MS Mincho;
 	mso-ansi-font-size:12.0pt;
 	mso-bidi-font-size:12.0pt;
-	font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-ascii-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-fareast-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-hansi-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";
-	mso-bidi-font-family:"・ｭ・ｳ ・ｰ繧ｴ繧ｷ繝・け";}
+	font-family:"MS Mincho";
+	mso-ascii-font-family:"MS Mincho";
+	mso-fareast-font-family:"MS Mincho";
+	mso-hansi-font-family:"MS Mincho";
+	mso-bidi-font-family:"MS Mincho";}
 .MsoChpDefault
 	{mso-style-type:export-only;
 	mso-default-props:yes;
@@ -945,7 +945,7 @@ ul
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:讓呎ｺ悶・陦ｨ;
+	{mso-style-name:MS Mincho;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -974,7 +974,7 @@ ul
 <div class=WordSection1>
 
 <p class=MsoNormal style='margin-right:248.5pt;mso-para-margin-right:20.71gd'><span
-style='font-size:13.5pt'>謨呎肢</span>縲<span style='font-size:18.0pt;color:#000099'>縲・伐縲・塙<span
+style='font-size:13.5pt'>教授</span>　<span style='font-size:18.0pt;color:#000099'>〇田〇雄<span
 lang=EN-US>&nbsp;<o:p></o:p></span></span></p>
 
 <p class=MsoNormal style='margin-right:284.05pt;mso-para-margin-right:23.67gd'><span
@@ -1024,11 +1024,11 @@ lang=EN-US><o:p>&nbsp;</o:p></span></p>
 style='mso-ignore:vglayout' clear=ALL>
 </p>
 
-<p><span style='color:black'>謇螻橸ｼ壹縲・・､ｧ蟄ｦ蟾･蟄ｦ驛ｨ諠・ｱ蟄ｦ遘・/span><span lang=EN-US> <br>
-</span><span style='color:black'>騾｣邨｡蜈茨ｼ壹<span lang=EN-US>****.****@gmail.com<o:p></o:p></span></span></p>
+<p><span style='color:black'>所属：SDGH大学工学部情報学科</span><span lang=EN-US> <br>
+</span><span style='color:black'>連絡先：　<span lang=EN-US>****.****@gmail.com<o:p></o:p></span></span></p>
 
 <p style='margin-left:14.15pt;text-indent:-14.15pt;mso-char-indent-count:-1.18'><span
-lang=EN-US>1960</span>蟷ｴ逕・</p>
+lang=EN-US>1960</span>年生</p>
 
 <p><span lang=EN-US>1983</span>蟷ｴ縲笨問恂螟ｧ蟄ｦ蟾･蟄ｦ驛ｨ蜊呈･ｭ<span lang=EN-US> <br>
 1985</span>蟷ｴ縲笨問恂螟ｧ蟄ｦ蟾･蟄ｦ遐皮ｩｶ遘台ｿｮ莠・span lang=EN-US> <br>
