--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@ lang=EN-US><o:p>&nbsp;</o:p></span></p>
   </tr>
   <tr>
    <td></td>
-   <td><img width=165 height=197 src=".files/image002.jpg" v:shapes="蝗ｳ_x0020_3"></td>
+   <td><img width=165 height=197 src="picture/profile.jpg" v:shapes="顔写真_x0020_3"></td>
   </tr>
  </table>
  </span><![endif]><!--[if gte vml 1]></o:wrapblock><![endif]--><br
