--- a/index.html
+++ b/index.html
@@ -1030,12 +1030,12 @@ style='mso-ignore:vglayout' clear=ALL>
 <p style='margin-left:14.15pt;text-indent:-14.15pt;mso-char-indent-count:-1.18'><span
 lang=EN-US>1960</span>年生</p>
 
-<p><span lang=EN-US>1983</span>蟷ｴ縲笨問恂螟ｧ蟄ｦ蟾･蟄ｦ驛ｨ蜊呈･ｭ<span lang=EN-US> <br>
-1985</span>蟷ｴ縲笨問恂螟ｧ蟄ｦ蟾･蟄ｦ遐皮ｩｶ遘台ｿｮ莠・span lang=EN-US> <br>
-1991</span>蟷ｴ縲笨問恂螟ｧ蟄ｦ蟾･蟄ｦ蜊壼｣ｫ </p>
+<p><span lang=EN-US>1983</span>年　QWER大学工学部卒業<span lang=EN-US> <br>
+1985</span>年　QWER大学大学院工学研究科修了<span lang=EN-US> <br>
+1991</span>年　QWER大学工学博士</p>
 
 <p style='margin-left:14.15pt;mso-para-margin-left:.01gd;text-indent:-14.05pt;
-mso-char-indent-count:-1.17'>逡･豁ｴ<span lang=EN-US> <br>
+mso-char-indent-count:-1.17'>略歴<span lang=EN-US> <br>
 </span>笆｡笆｡螟ｧ蟄ｦ蟾･蟄ｦ驛ｨ縲隰帛ｸｫ<span lang=EN-US>(1991)</span>縲蜷悟勧謨呎肢<span lang=EN-US>(1992)</span>縲蜷梧蕗謗茨ｼ・span
 lang=EN-US>2000) <br>
 </span>ABCD螟ｧ蟄ｦ蟾･蟄ｦ驛ｨ縲謨呎肢<span lang=EN-US>(2007) <br>
@@ -1113,7 +1113,7 @@ mso-bidi-font-size:12.0pt;mso-font-kerning:1.0pt'><span style='mso-list:Ignore'>
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span></span></b><![endif]><span
 lang=EN-US style='mso-bidi-font-family:"Times New Roman";mso-font-kerning:1.0pt'>JST
 CREST </span><span style='mso-bidi-font-family:"Times New Roman";mso-font-kerning:
-1.0pt'>繝薙ャ繧ｰ繝・・繧ｿ譎ゆｻ｣縺ｫ蜷代￠縺滄擠譁ｰ逧・い繝ｫ繧ｴ繝ｪ繧ｺ繝蝓ｺ逶､・・span lang=EN-US>2014</span>蟷ｴ<span lang=EN-US>10</span>譛茨ｽ橸ｼ・span
+1.0pt'>ビッグデータ新時代の革新的アルゴリズムプロジェクト<span lang=EN-US>2014</span>蟷ｴ<span lang=EN-US>10</span>譛茨ｽ橸ｼ・span
 lang=EN-US><a href="jstcrest.html"><span lang=EN-US><span lang=EN-US>隱ｬ譏・/span></span></a><o:p></o:p></span></span></p>
 
 <p><b style='mso-bidi-font-weight:normal'><span lang=EN-US style='font-size:
